unpackaged/objects/Achievement__c.object
<CustomObject>
    <fields>
        <fullName>Adherence_to_Ambit_Values_Target__c</fullName>
        <label>Adherence to Ambit Values Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adherence_to_Ambit_Values__c</fullName>
        <label>Adherence To Ambit Values</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Ratio_Achieved__c</fullName>
        <label>Approval Ratio Achieved (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approval_Ratio_Target__c</fullName>
        <label>Approval Ratio Target (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <formula>User__r.Branch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cases_Disbursed_in_last_3_days_Ach__c</fullName>
        <label>Cases Disbursed in last 3 days Ach (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cases_Disbursed_in_last_3_days_Target__c</fullName>
        <defaultValue>&apos;Not more than 10%&apos;</defaultValue>
        <label>Cases Disbursed in last 3 days Target(%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_and_email_skillset_Target__c</fullName>
        <label>Communication and email skillset Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_and_email_skillset__c</fullName>
        <label>Communication and Email Skill Set</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Biz_Sourced_Achieved__c</fullName>
        <label>Direct Biz Sourced Achieved (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Direct_Biz_Sourced_Target__c</fullName>
        <label>Direct Biz Sourced Target (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Duration_Achievement__c</fullName>
        <label>Duration Achievement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FTR_Achieved__c</fullName>
        <label>FTR Achieved (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FTR_Target__c</fullName>
        <label>FTR Target (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IRR_Achieved__c</fullName>
        <label>IRR Achieved (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IRR_Target__c</fullName>
        <label>IRR Target (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Insurance_Penetration_Achieved__c</fullName>
        <label>Insurance Penetration Achieved (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Insurance_Penetration_Target__c</fullName>
        <label>Insurance Penetration Target (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead_Generation_Achieved__c</fullName>
        <label>Lead Generation Achieved</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Generation_Target__c</fullName>
        <label>Lead Generation Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_Achievement__c</fullName>
        <label>Meeting Achievement</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_Lead_Conversation_Ratio__c</fullName>
        <label>Meeting/Lead Conversation Ratio Ach (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Meeting_Lead_Conversion_Ratio_Target__c</fullName>
        <label>Meeting/Lead Conversion Ratio Target (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Meetings_Target__c</fullName>
        <label>Meetings Target</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month </label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPA_Achieved__c</fullName>
        <label>NPA Achieved</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NPA_Target__c</fullName>
        <label>NPA Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_PF_Achieved__c</fullName>
        <label>Net PF Achieved (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_PF_Target__c</fullName>
        <label>Net PF Target (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_of_Files_Logged_In_Achieved__c</fullName>
        <label>No. of Files Logged In Achieved</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Files_Logged_In_Target__c</fullName>
        <label>No. of Files Logged In Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Sanctions__c</fullName>
        <label>No Of Sanctions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Units_Disbursed_Achieved__c</fullName>
        <label>No. of Units Disbursed Achieved</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Units_Disbursed_Target__c</fullName>
        <label>No. of Units Disbursed Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTC_PDD_above_norms_Achieved__c</fullName>
        <label>OTC/PDD above norms Achieved</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTC_PDD_above_norms_Target__c</fullName>
        <defaultValue>&apos;Nil OTC and PDD pending for more than 7 days and 90 days respectively&apos;</defaultValue>
        <label>OTC/PDD above norms Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverallGrooming_attendance_and_time__c</fullName>
        <label>Overall Grooming, Attendance and Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_conduct_and_Cross_function__c</fullName>
        <label>Overall Conduct and Cross Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_grooming_attendance_dis_Target__c</fullName>
        <label>Overall-grooming/attendance/dis Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overallconduct_Crossfunction_deal_Target__c</fullName>
        <label>Overallconduct/Crossfunction deal Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>TEXT( User__r.Product__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter </label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_TAT_Resolution_Achieved__c</fullName>
        <label>Query TAT Resolution Achieved (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Query_TAT_Resolution_Target__c</fullName>
        <defaultValue>&apos;80% cases to be resolved in T+4 days&apos;</defaultValue>
        <label>Query TAT Resolution Target (%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target</label>
        <referenceTo>Targets__c</referenceTo>
        <relationshipLabel>Achievements</relationshipLabel>
        <relationshipName>Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Targets_Achieved__c</fullName>
        <label>Targets Achieved </label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Weighted_Achievement__c</fullName>
        <label>Total Weighted Achievement </label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UCV_Amount__c</fullName>
        <label>UCV Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unsecured_Amount__c</fullName>
        <label>Unsecured Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value_Achieved__c</fullName>
        <label>Value Achieved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Target__c</fullName>
        <label>Value Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_of_Files_Logged_In_Achieved__c</fullName>
        <label>Value of Files Logged In Achieved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_of_Files_Logged_In_Target__c</fullName>
        <label>Value of Files Logged In Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_of_Files_Logged_In_Targets__c</fullName>
        <label>Value of Files Logged In Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volume_Achieved__c</fullName>
        <label>Volume Achieved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_Target__c</fullName>
        <label>Volume Target (In Cr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year </label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Achievement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Target__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NPA_Achieved__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Achievement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Achievements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>